Update to 1.17